testsuite/tests/v1/bin_op/arith/multiply/non_int/test.out
Error: Error from the Lua engine
   ╭─[ <working-dir>/script.lkql:4:7 ]
   │
 4 │ print(x * y)
   │       ──┬──  
   │         ╰──── Attempt to perform arithmetic on local 'y' (a boolean value)
───╯
